--- a/source/sass/blocks/main-section.scss
+++ b/source/sass/blocks/main-section.scss
@@ -5,6 +5,10 @@
     grid-column: span 3;
     margin-bottom: 80px;
 
+    &--desktop-mb0 {
+      margin-bottom: 0;
+    }
+
     &--desktop-bcg {
       padding: 64px 120px 80px;
       background: url("../../img/how-it-workBackground.jpg") no-repeat $how-it-workBackground;
